plugins {
    id 'fabric-loom' version "${loom_version}"
    id 'maven-publish'
    id 'checkstyle'
}

// Wire version/group/name from gradle.properties
group = project.findProperty('maven_group') ?: 'woflo.petsplus'
version = project.findProperty('mod_version') ?: '0.0.0-dev'

base {
    archivesName = project.findProperty('archives_base_name') ?: 'petsplus'
}

// Repositories needed for Loom + deps
repositories {
    mavenCentral()
    maven { url "https://maven.fabricmc.net" }
}

// Expand version into fabric.mod.json
processResources {
    inputs.property "version", project.version
    filesMatching("fabric.mod.json") {
        expand([version: project.version, mod_version: project.version])
    }
}

// Java toolchain (Minecraft 1.21.10 requires Java 21)
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    withSourcesJar()
}

loom {
    mixin {
        defaultRefmapName = "petsplus.refmap.json"
    }
}

tasks.withType(JavaCompile).configureEach {
    options.release = 21
}

jar {
    from("LICENSE") {
        rename { "${it}_${base.archivesName.get()}" }
    }
}

// Configure test tasks so targeted unit coverage can run under JUnit Jupiter
tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

// Publishing (standard Loom template)
publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = base.archivesName.get()
            from components.java
        }
    }
    repositories {
        // Configure if you need to publish
    }
}

dependencies {
    // Core Minecraft + mappings + loader
    minecraft "com.mojang:minecraft:${minecraft_version}"
    mappings "net.fabricmc:yarn:${yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${loader_version}"

    // Fabric API for mod features
    modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"

    testImplementation "org.junit.jupiter:junit-jupiter-api:5.10.2"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.10.2"
    testImplementation "org.mockito:mockito-inline:5.2.0"
}

checkstyle {
    toolVersion = '10.12.5'
    configFile = file('config/checkstyle/checkstyle.xml')
    checkstyleMain.source = 'src/main/java'
    checkstyleTest.source = 'src/test/java'
}
